crates/kainetic-macros/tests/ui/tool_not_async.stderr
error: #[tool] functions must be `async fn` — add the `async` keyword
  --> tests/ui/tool_not_async.rs:12:1
   |
12 | fn not_async(input: Input, _ctx: ToolContext) -> Result<Output, ToolError> {
   | ^^

warning: unused imports: `ToolContext` and `ToolError`
 --> tests/ui/tool_not_async.rs:1:22
  |
1 | use kainetic_tools::{ToolContext, ToolError};
  |                      ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
